syntax = "proto3";
package pb;

message LoggerMessage {
	string IpPort = 1;
	string ServiceName = 2;
	string Level = 3;
	string Text = 4;
	google.protobuf.Timestamp CreatedAt = 5;
}